src/tests/snapshots/cargo_vet__tests__vet__mock-simple-lower-version-review.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "third-party1",
      "version": "10.0.0",
      "missing_criteria": [
        "reviewed"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "third-party1",
        "notable_parents": "first-party",
        "suggested_criteria": [
          "reviewed"
        ],
        "suggested_diff": {
          "from": "9.0.0",
          "to": "10.0.0",
          "diffstat": {
            "raw": "+19",
            "count": 19
          }
        }
      }
    ],
    "suggest_by_criteria": {
      "reviewed": [
        {
          "name": "third-party1",
          "notable_parents": "first-party",
          "suggested_criteria": [
            "reviewed"
          ],
          "suggested_diff": {
            "from": "9.0.0",
            "to": "10.0.0",
            "diffstat": {
              "raw": "+19",
              "count": 19
            }
          }
        }
      ]
    },
    "total_lines": 19
  }
}
