src/tests/snapshots/cargo_vet__tests__vet__simple-policy-first-extra-partially-missing.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "third-party1",
      "version": "10.0.0",
      "missing_criteria": [
        "fuzzed"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "third-party1",
        "notable_parents": "first-party",
        "suggested_criteria": [
          "fuzzed"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "raw": "+100",
            "count": 100
          }
        }
      }
    ],
    "suggest_by_criteria": {
      "fuzzed": [
        {
          "name": "third-party1",
          "notable_parents": "first-party",
          "suggested_criteria": [
            "fuzzed"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "raw": "+100",
              "count": 100
            }
          }
        }
      ]
    },
    "total_lines": 100
  }
}
